css/main.css
:root {
  --background: #211833;
  --purple: #C91FEC;
  --gold: #ECD21F;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  -webkit-tap-highlight-color: transparent;
}

input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

body {
  width: 100%;
  font-family: 'Raleway', sans-serif;
  font-size: 1.5rem;
  position: relative;
}

.fixedNav {
  position: fixed;
  width: 100%;
  height: 110px;
  /* border: 1px solid red; */
  background-color: var(--background);
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  z-index: 999;
  
}

.navLeft {
  height: 100%;
  width: 100%;
  font-family: 'Crete Round', serif;
  color: var(--purple);
  font-size: 1.5rem;
  padding-left: 3rem;
  display: grid;
  align-items: center;
  transition: color 300ms ease;
}

.navRight {
  width: 100%;
  height: 100%;
  padding-right: 3rem;
  display: grid;
  align-items: center;
  justify-content: end;
  
}

.menuWrapper {
  display: inline-block;
  padding: 7px 0;
  cursor: pointer;
}

.menuLine {
  width: 1.5rem;
  height: .15rem;
  background-color: var(--purple);
  transition: transform 300ms ease;
}

.menuLine::before, .menuLine::after {
  content: '';
  position: absolute;
  width: 1.5rem;
  height: .15rem;
  background-color: var(--purple);
  transition: margin 300ms ease 300ms, transform 300ms ease;
}

.menuLine::before {
  margin-top: -.4rem;
}

.menuLine::after {
  margin-top: .4rem;
}

.menuLine.toggled {
  transform: rotate(45deg);
  transition: transform 300ms ease 300ms;
}

.menuLine.toggled::before, .menuLine.toggled::after {
  margin-top: 0;
  transform: rotate(90deg);
  transition: margin 300ms ease, transform 300ms ease 300ms;
}

.navOpened {
  position: fixed;
  width: 100%;
  height: 100vh;
  background-color: var(--background);
  opacity: 0;
  display: grid;
  align-items: center;
  padding: 0 3rem;
  transition: opacity 300ms ease;
  pointer-events: none;
  z-index: 2;
}

.navOpened li {
  list-style: none;
  display: block;
  margin: 3rem 0;
  text-align: end;
  padding-right: 5%;
  opacity: 0;
  transition: opacity 50ms linear, padding-right 0ms linear 300ms;
}

.navOpened li a {
  text-decoration: none;
  color: var(--purple);
}

.navLeft.toggled {
  color: rgba(255, 255, 255, 0);
}

.inputLine.toggled::after, .inputLine.toggled.effect::after {
  background-color: rgba(255, 255, 255, 0);
}

.navOpened.toggled {
  opacity: 1;
  pointer-events: auto;
}

.navOpened.toggled ul li:nth-child(1) {
  opacity: 1;
  padding-right: 0;
  transition: opacity 200ms ease 300ms, padding-right 200ms ease-out 300ms
}

.navOpened.toggled ul li:nth-child(2) {
  opacity: 1;
  padding-right: 0;
  transition: opacity 200ms ease 500ms, padding-right 200ms ease-out 500ms
}

.navOpened.toggled ul li:nth-child(3) {
  opacity: 1;
  padding-right: 0;
  transition: opacity 200ms ease 700ms, padding-right 200ms ease-out 700ms
}

.introWrapper {
  width: 100%;
  height: 100vh;
  padding-top: 110px;
  background-color: var(--background);
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-areas: 
    'introContent'
    'bottom';
}

.introContent {
  grid-area: introContent;
  color: var(--purple);
  padding: 0 3rem;
  color: #fff;
  display: grid;
  align-items: end;
  padding-bottom: 2rem;
}

.header {
  margin-bottom: 2rem;
  color: var(--purple);
  z-index: 1;
}

.subHeader {
  width: 75%;
  z-index: 1;
}

.gold {
  color: var(--gold);
}

.bottom {
  grid-area: bottom;
  display: grid;
  justify-content: center;
  align-items: center;
}

.arrow {
  width: 3rem;
  cursor: pointer;
}

.appWrapper {
  width: 100%;
  height: 100vh;
  background-color: var(--background);
  /* padding-top: 10rem; */
}

.inputsWrapper {
  text-align: center;
}

.inputsWrapper input {
  margin: 1rem 0;
  background: none;
  color: #fff;
  font-family: 'raleway', sans-serif;
  padding: .5rem .5rem 0 1rem;
  font-size: 1rem;
  width: 7rem;
}

.inputsWrapper input::placeholder {
  font-family: 'raleway', sans-serif;
  color: rgba(255, 255, 255, 0.2);
}

.inputLine {
  display: inline-block;
  margin: 0 .5rem;
}

.inputLine::after {
  content: '';
  background-color: rgba(255, 255, 255, 0.2);
  width: 72%;
  height: .1rem;
  margin: auto;
  display: block;
  transform: translate(0, -10px);
  transition: background-color 300ms, transform 300ms, width 300ms;
}

.inputLine.effect::after {
  width: 100%;
  transform: translate(0, -10px);
  background-color: var(--purple);
}

.submitWrapper {
  font-size: 1rem;
  color: #fff;
  /* border: 1px solid red; */
  padding: 2rem 0;
  text-align: center;
}

.btn {
  border: .1rem solid #fff;
  padding: .7rem 1.5rem;
  border-radius: 3px;
  cursor: pointer;
  background: none;
  color: #fff;
  font-family: 'raleway', sans-serif;
  font-size: 1rem;
}

